// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/lib/events getEvents should return events for all calendars 1`] = `
[
  {
    "id": "id1",
    "organizer": {
      "displayName": "calendar 1",
      "email": "id1",
    },
    "summary": "event 1",
  },
  {
    "id": null,
    "organizer": {
      "email": "id2",
      "self": true,
    },
    "summary": "event 2",
  },
  {
    "id": "id3",
    "organizer": {
      "displayName": undefined,
      "email": undefined,
    },
    "summary": "event 3",
  },
  {
    "id": "id4",
    "organizer": undefined,
    "summary": "event 4",
  },
  {
    "id": "id1",
    "organizer": {
      "displayName": "calendar 1",
      "email": "id1",
    },
    "summary": "event 1",
  },
  {
    "id": null,
    "organizer": {
      "email": "id2",
      "self": true,
    },
    "summary": "event 2",
  },
  {
    "id": "id3",
    "organizer": {
      "displayName": undefined,
      "email": undefined,
    },
    "summary": "event 3",
  },
  {
    "id": "id4",
    "organizer": undefined,
    "summary": "event 4",
  },
  {
    "id": "id1",
    "organizer": {
      "displayName": "calendar 1",
      "email": "id1",
    },
    "summary": "event 1",
  },
  {
    "id": null,
    "organizer": {
      "email": "id2",
      "self": true,
    },
    "summary": "event 2",
  },
  {
    "id": "id3",
    "organizer": {
      "displayName": undefined,
      "email": undefined,
    },
    "summary": "event 3",
  },
  {
    "id": "id4",
    "organizer": undefined,
    "summary": "event 4",
  },
  {
    "id": "id1",
    "organizer": {
      "displayName": "calendar 1",
      "email": "id1",
    },
    "summary": "event 1",
  },
  {
    "id": null,
    "organizer": {
      "email": "id2",
      "self": true,
    },
    "summary": "event 2",
  },
  {
    "id": "id3",
    "organizer": {
      "displayName": undefined,
      "email": undefined,
    },
    "summary": "event 3",
  },
  {
    "id": "id4",
    "organizer": undefined,
    "summary": "event 4",
  },
]
`;

exports[`src/lib/events getEvents should return events only for selected calendar 1`] = `
[
  {
    "id": "id1",
    "organizer": {
      "displayName": "calendar 1",
      "email": "id1",
    },
    "summary": "event 1",
  },
  {
    "id": null,
    "organizer": {
      "email": "id2",
      "self": true,
    },
    "summary": "event 2",
  },
  {
    "id": "id3",
    "organizer": {
      "displayName": undefined,
      "email": undefined,
    },
    "summary": "event 3",
  },
  {
    "id": "id4",
    "organizer": undefined,
    "summary": "event 4",
  },
]
`;

exports[`src/lib/events getEventsFull should return events with calendar data for all calendars 1`] = `
[
  {
    "calendar": {
      "description": "calendar 1 description",
      "hidden": false,
      "id": "id1",
      "summary": "calendar 1",
    },
    "id": "id1",
    "organizer": {
      "displayName": "calendar 1",
      "email": "id1",
    },
    "summary": "event 1",
  },
  {
    "calendar": {
      "description": "calendar 2 description",
      "hidden": undefined,
      "id": "id2",
      "summary": "calendar 2",
    },
    "id": null,
    "organizer": {
      "email": "id2",
      "self": true,
    },
    "summary": "event 2",
  },
  {
    "calendar": undefined,
    "id": "id3",
    "organizer": {
      "displayName": undefined,
      "email": undefined,
    },
    "summary": "event 3",
  },
  {
    "calendar": undefined,
    "id": "id4",
    "organizer": undefined,
    "summary": "event 4",
  },
  {
    "calendar": {
      "description": "calendar 1 description",
      "hidden": false,
      "id": "id1",
      "summary": "calendar 1",
    },
    "id": "id1",
    "organizer": {
      "displayName": "calendar 1",
      "email": "id1",
    },
    "summary": "event 1",
  },
  {
    "calendar": {
      "description": "calendar 2 description",
      "hidden": undefined,
      "id": "id2",
      "summary": "calendar 2",
    },
    "id": null,
    "organizer": {
      "email": "id2",
      "self": true,
    },
    "summary": "event 2",
  },
  {
    "calendar": undefined,
    "id": "id3",
    "organizer": {
      "displayName": undefined,
      "email": undefined,
    },
    "summary": "event 3",
  },
  {
    "calendar": undefined,
    "id": "id4",
    "organizer": undefined,
    "summary": "event 4",
  },
  {
    "calendar": {
      "description": "calendar 1 description",
      "hidden": false,
      "id": "id1",
      "summary": "calendar 1",
    },
    "id": "id1",
    "organizer": {
      "displayName": "calendar 1",
      "email": "id1",
    },
    "summary": "event 1",
  },
  {
    "calendar": {
      "description": "calendar 2 description",
      "hidden": undefined,
      "id": "id2",
      "summary": "calendar 2",
    },
    "id": null,
    "organizer": {
      "email": "id2",
      "self": true,
    },
    "summary": "event 2",
  },
  {
    "calendar": undefined,
    "id": "id3",
    "organizer": {
      "displayName": undefined,
      "email": undefined,
    },
    "summary": "event 3",
  },
  {
    "calendar": undefined,
    "id": "id4",
    "organizer": undefined,
    "summary": "event 4",
  },
  {
    "calendar": {
      "description": "calendar 1 description",
      "hidden": false,
      "id": "id1",
      "summary": "calendar 1",
    },
    "id": "id1",
    "organizer": {
      "displayName": "calendar 1",
      "email": "id1",
    },
    "summary": "event 1",
  },
  {
    "calendar": {
      "description": "calendar 2 description",
      "hidden": undefined,
      "id": "id2",
      "summary": "calendar 2",
    },
    "id": null,
    "organizer": {
      "email": "id2",
      "self": true,
    },
    "summary": "event 2",
  },
  {
    "calendar": undefined,
    "id": "id3",
    "organizer": {
      "displayName": undefined,
      "email": undefined,
    },
    "summary": "event 3",
  },
  {
    "calendar": undefined,
    "id": "id4",
    "organizer": undefined,
    "summary": "event 4",
  },
]
`;

exports[`src/lib/events getEventsFull should return events with calendar data only for selected calendar 1`] = `
[
  {
    "calendar": {
      "description": "calendar 1 description",
      "hidden": false,
      "id": "id1",
      "summary": "calendar 1",
    },
    "id": "id1",
    "organizer": {
      "displayName": "calendar 1",
      "email": "id1",
    },
    "summary": "event 1",
  },
  {
    "calendar": {
      "description": "calendar 2 description",
      "hidden": undefined,
      "id": "id2",
      "summary": "calendar 2",
    },
    "id": null,
    "organizer": {
      "email": "id2",
      "self": true,
    },
    "summary": "event 2",
  },
  {
    "calendar": undefined,
    "id": "id3",
    "organizer": {
      "displayName": undefined,
      "email": undefined,
    },
    "summary": "event 3",
  },
  {
    "calendar": undefined,
    "id": "id4",
    "organizer": undefined,
    "summary": "event 4",
  },
]
`;
